# pyre_mre

./: .pre-commit-config.yaml  .pyre_configuration  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
pyre_mre/: main.py
