[project]
name = "pyre-mre"
version = "0.1.0"
description = ""
authors = [
    {name = "Iain-S",email = "25081046+Iain-S@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyre-check (>=0.9.23,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["UP"]
